# Project_A

./: .coverage  .cursorrules  .editorconfig  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  .yamllint  AIRFLOW_SETUP_COMPLETE.md  AWS_ARCHITECTURE_GUIDANCE.md  AWS_CODE_READINESS_REPORT.md  AWS_COMPLETE_DEPLOYMENT_GUIDE.md  AWS_EXECUTION_READINESS_CHECKLIST.md  AWS_STEP_BY_STEP_MASTER_GUIDE.md  AWS_STRUCTURE_ORGANIZATION_COMPLETE.md  CHANGELOG.md  CHANGELOG_AWS_2025.md  CLEANUP_ANALYSIS.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_FINAL_REPORT.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_FINAL.md  CLEANUP_UNNECESSARY_FILES.md  CLEANUP_UNNECESSARY_FILES.sh  CODEBASE_VALIDATION_REPORT.md  CODEOWNERS  CODE_IMPROVEMENTS_ANALYSIS.md  CODE_QUALITY_REPORT.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  CONSOLIDATED_ANALYSIS.md  CONSOLIDATION_SUMMARY.md  Dockerfile  ENHANCEMENTS_A_TO_D_COMPLETE.md  ENTERPRISE_FEATURES_COMPLETE.md  ERROR_CHECK_REPORT.md  ETL_COMMANDS.md  (+82 more)
.airflow_local/: airflow-scheduler.err  airflow-scheduler.out  airflow-webserver.err  airflow-webserver.out  airflow.cfg  airflow.db  standalone_admin_password.txt
.github/workflows/: azure-ci-cd-pipeline.yml  ci-cd-complete.yml  ci-cd-pipeline.yml  ci.yml  data-ci.yml  deploy.yml  infra-plan.yml  release.yml
airflow/: airflow.cfg  airflow.db
artifacts/: code_review_report.md  pytest_collect.txt  ruff_report.txt
aws/: AWS_FOLDER_IMPROVEMENTS.md  README.md  README_AWS.md  RUNBOOK_AWS_2025.md  STRUCTURE_STANDARDIZATION_COMPLETE.md  STRUCTURE_STANDARDIZATION_PLAN.md  __init__.py  requirements-enterprise.txt
azure/: README_AZURE.md  RUNBOOK_AZURE_2025.md
ci_cd/: build_wheel.sh  deploy_jobs.sh
conf/: application-aws.yaml  application-local.yaml
config/: aws.yaml  azure.yaml  config-dev.yaml  config-prod.yaml  config-template.yaml  config.yaml  default.yaml  delta-local.yaml  dev.yaml  dq.yaml  lineage.yaml  local.yaml  logging.conf  prod.yaml  retention-config.yaml  sample_profiles.yaml  storage.yaml
dags/: catalog_and_dq_dag.py  daily_batch_pipeline_dag.py  daily_batch_with_monitoring.py  daily_pipeline.py  main_etl_dag.py  returns_pipeline_dag.py
dbt/: dbt_project.yml  profiles.yml
docker/: docker-compose.yml  spark-defaults.conf
docs/: ALL_CODE_LOCATIONS.md  API_DOCUMENTATION.md  AWS_DATA_FIX_REQUIRED.md  AWS_DEPLOYMENT_CHECKLIST.md  AWS_FILES_REVIEW.md  AWS_LOCAL_ALIGNMENT_COMPLETE.md  BEGINNERS_GUIDE.md  BRONZE_DIRECTORY_STRUCTURE.md  CHEATSHEET.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  CODE_HARDENING_CHECKLIST.md  CODE_HARDENING_SUMMARY.md  CODE_QUALITY_REFACTORING_PLAN.md  CODE_QUALITY_REVIEW.md  CODE_REVIEW_SUMMARY.md  COMMANDS_REFERENCE.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_DQ_FRAMEWORK_COMPLETE.md  CONSOLIDATION_AND_FIXES_PLAN.md  COST_OPTIMIZATION.md  CRITICAL_DATA_SAFETY_IMPLEMENTATION.md  CRM_SIMULATION.md  CURSOR_AI_TASK_PROMPTS.md  DATA_CONTRACTS.md  DATA_DIRECTORY_ORGANIZATION.md  DATA_FIXES_SUMMARY.md  DATA_MODEL.md  DATA_PROFILE.md  DATA_QUALITY_CHECK_GUIDE.md  DATA_QUALITY_FRAMEWORK.md  DATA_QUALITY_REPORT.md  DATA_SOURCES_COMPARISON.md  DATA_SOURCE_RECOMMENDATIONS.md  DATA_SOURCE_STRATEGY.md  DATA_SOURCE_UNIFICATION.md  DEEP_AUDIT_REPORT.md  DEEP_CODE_REVIEW.md  DEEP_REVIEW_FIXES.md  (+61 more)
env/: dev.env  local.env  prod.env
ge/: great_expectations.yml
infrastructure/: azure-main.tf  azure-variables.tfvars.example
jobs/: __init__.py  bronze_to_silver_behavior.py  collect_run_summary.py  hubspot_to_bronze.py  kafka_orders_to_bronze.py  publish_gold_to_snowflake.py  redshift_to_bronze.py  run_pipeline.py  salesforce_to_bronze.py  silver_build_customer_360.py  silver_build_product_perf.py  snowflake_to_bronze.py  vendor_to_bronze.py
local/: .gitignore  README.md
monitoring/: alertmanager.yml  prometheus.yml
notebooks/: 01_run_pipeline.py  02_run_standard_pipeline.py
runbooks/: RUNBOOK_BACKFILL.md  RUNBOOK_DQ_FAILOVER.md  RUNBOOK_STREAMING_RESTART.md
scripts/: analyze_and_improve.py  analyze_codebase.py  analyze_repo_structure.py  analyze_unused_modules.py  aws_fix_immediate.py  aws_remediation_comprehensive.py  aws_validation_comprehensive.py  backfill_range.py  check_bronze_data.py  cleanup_and_align_aws.py  cleanup_old_data.py  cleanup_project.py  cleanup_repo.py  compact_dlq_weekly.sh  comprehensive_project_check.py  convert_fx_csv_to_json.py  deep_review_fixes.py  delete_week_old_data.py  delta_maintenance.py  delta_optimize_vacuum.py  emr_submit.sh  end_to_end_check.py  enhance_data_sources.py  fetch_silver_to_gold_logs.sh  final_cleanup.py  final_validation.py  fix_all_etl_code.sh  fix_all_source_data.py  fix_critical_errors.py  fix_data_quality_issues.py  generate_data_catalog.py  generate_input_data.py  generate_realistic_data.py  generate_schema_baselines.py  generate_transform_showcase.py  implement_improvements.py  kafka_consumer.py  kafka_producer.py  list_pyspark_functions.py  maintenance.sql  (+30 more)
tests/: conftest.py  delta_test.py  dev_secret_probe.py  test_bronze_to_silver.py  test_bronze_to_silver_behavior.py  test_bronze_to_silver_multisource_job.py  test_bronze_to_silver_orders.py  test_collect_run_summary.py  test_config.py  test_config_validation.py  test_contracts.py  test_contracts_customers.py  test_dag_import.py  test_dag_imports.py  test_dq_checks.py  test_dq_policies.py  test_extract.py  test_fail_fast_and_idempotency.py  test_fx_json_to_bronze_write_retry.py  test_fx_transform.py  test_glue_catalog_contract.py  test_gold_contract.py  test_great_expectations_runner.py  test_integration.py  test_integration_comprehensive.py  test_lineage_emitter.py  test_load.py  test_metrics_collector.py  test_module_imports.py  test_monitoring.py  test_orders_transform.py  test_performance_optimization.py  test_pii_utils.py  test_pipeline_components.py  test_pipeline_integration.py  test_publish_gold_to_snowflake.py  test_quality_gate.py  test_runtime_contracts.py  test_safe_writer.py  test_scd2.py  (+12 more)
tools/: validate_aws_etl.py  validate_local_etl.py
(+874 files in other folders)
