[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspark-interview-project"
version = "0.1.0"
description = "PySpark Data Engineering Project with Delta Lake, AWS EMR Serverless, and MWAA"
authors = [
    {name = "Data Engineering Team", email = "data-eng@company.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pyspark>=3.5.1",
    "delta-spark>=3.2.0",
    "pyyaml>=6.0",
    "boto3>=1.34.0",
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "python-dotenv>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "detect-secrets>=1.4.0",
    "great-expectations>=0.18.0",
    "apache-airflow-providers-openlineage>=1.0.0",
    "requests>=2.31.0",
    "snowflake-connector-python>=3.0.0",
    "simple-salesforce>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "detect-secrets>=1.4.0",
    "pre-commit>=3.4.0",
]
aws = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
kafka = [
    "confluent-kafka>=2.3.0",
]
salesforce = [
    "simple-salesforce>=1.12.0",
]
snowflake = [
    "snowflake-connector-python>=3.0.0",
    "snowflake-sqlalchemy>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/company/pyspark-data-engineer-project"
Repository = "https://github.com/company/pyspark-data-engineer-project"
Issues = "https://github.com/company/pyspark-data-engineer-project/issues"

[project.scripts]
bronze-to-silver = "pyspark_interview_project.pipeline.bronze_to_silver:main"
silver-to-gold = "pyspark_interview_project.pipeline.silver_to_gold:main"
kafka-orders-stream = "pyspark_interview_project.jobs.kafka_orders_stream:main"
salesforce-to-bronze = "pyspark_interview_project.jobs.salesforce_to_bronze:main"
snowflake-to-bronze = "pyspark_interview_project.jobs.snowflake_to_bronze:main"
snowflake-merge = "pyspark_interview_project.jobs.snowflake_bronze_to_silver_merge:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]